# AutoShells

./: CMakeLists.txt  categorymanager.cpp  categorymanager.h  databasehandler.cpp  databasehandler.h  mainwindow.cpp  mainwindow.h  nonmodaldialogue.cpp  nonmodaldialogue.h  projectmanager.cpp  projectmanager.h  tablemanager.cpp  tablemanager.h  templatemanager.cpp  templatemanager.h
